--- a/nano_view.ui
+++ b/nano_view.ui
@@ -7,8 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>1365</width>
-    <height>863</height>
+    <height>835</height>
    </rect>
+  </property>
+  <property name="font">
+   <font>
+    <family>Arial</family>
+   </font>
   </property>
   <property name="windowTitle">
    <string>Nano2021</string>
