--- a/nano_view.ui
+++ b/nano_view.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1435</width>
-    <height>921</height>
+    <height>893</height>
    </rect>
   </property>
   <property name="font">
@@ -499,13 +499,6 @@
               <bool>false</bool>
              </property>
              <layout class="QFormLayout" name="formLayout">
-              <item row="0" column="0">
-               <widget class="QLabel" name="label_3">
-                <property name="text">
-                 <string>Prominency</string>
-                </property>
-               </widget>
-              </item>
               <item row="0" column="1">
                <widget class="QSpinBox" name="prominency_prominency">
                 <property name="minimum">
@@ -525,7 +518,7 @@
               <item row="1" column="0">
                <widget class="QLabel" name="label_4">
                 <property name="text">
-                 <string>Min Freq</string>
+                 <string>Min Freq [channles]</string>
                 </property>
                </widget>
               </item>
@@ -548,7 +541,7 @@
               <item row="2" column="0">
                <widget class="QLabel" name="label_5">
                 <property name="text">
-                 <string>Band</string>
+                 <string>Band [% peak pos]</string>
                 </property>
                </widget>
               </item>
@@ -565,6 +558,13 @@
                 </property>
                 <property name="value">
                  <number>30</number>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="0">
+               <widget class="QLabel" name="label_3">
+                <property name="text">
+                 <string>Prominency [a.u.]</string>
                 </property>
                </widget>
               </item>
